[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortigate-cert-decoder"
version = "1.0.0"
authors = [
    {name = "Todd Albiston", email = "foxtrot711@gmail.com"},
]
description = "A CLI tool for retrieving and decoding certificates from FortiGate devices"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "cryptography>=41.0.0",
    "rich>=13.0.0",
    "urllib3>=1.26.0",
]
keywords = ["fortigate", "certificate", "ssl", "tls", "decoder", "x509", "firewall"]

[project.urls]
Homepage = "https://github.com/yourusername/fortigate-cert-decoder"
"Bug Reports" = "https://github.com/yourusername/fortigate-cert-decoder/issues"
Source = "https://github.com/yourusername/fortigate-cert-decoder"

[project.scripts]
fgt-cert-decode = "fortigate_cert_decoder.cert_decode:main"
